<resources>
    <string name="app_name">TipCalc</string>
    <string name="hint_total">Total</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_add">+</string>
    <string name="btn_remove">-</string>
    <string name="btn_delete_recent">Borrar recientes</string>
    <string name="tip_percentage">% de propina</string>
    <string name="act_about">Acerca de</string>

    <string name="propina">Propina %,.1f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
